[tool.poetry]
name = "marl-maxent-safe-exploration"
version = "0.1.0"
description = ""
authors = ["Chen Bo Calvin Zhang <chenbocalvinzhang@gmail.com>"]
readme = "README.md"
packages = [{include = "marl_maxent_safe_exploration"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
