[tool.poetry]
name = "marl-maxent-safe-exploration"
version = "0.1.0"
description = ""
authors = ["Chen Bo Calvin Zhang <chenbocalvinzhang@gmail.com>"]
readme = "README.md"
packages = [{include = "marl_maxent_safe_exploration"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
pygame = "^2.3.0"
matplotlib = "^3.7.1"
gymnasium = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
